Fixed bug #53727 (Inconsistent behavior of is_subclass_of with interfaces)