Zend/tests/is_a.phpt
@@ -38,6 +38,6 @@ bool(true)
 bool(false)
 bool(false)
 bool(true)
-bool(false)
+bool(true)
 AUTOLOAD 'X1'
 bool(false)
